--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 FRONTEND
               </span>
               <span class="pill-box-right">
-                With a foundation in HTML, CSS, and JavaScript, I've engineered multi-device compatible websites, enhancing UX/UI and optimizing performance.
+                With a foundation in HTML, CSS, and JavaScript, I've engineered multi-device compatible websites,
+                enhancing UX/UI and optimizing performance.
               </span>
             </div>
             <div class="pill-box">
@@ -154,7 +155,8 @@
                 SOFT SKILLS
               </span>
               <span class="pill-box-right">
-                Leader, effective communicator, and team player. Emphasizing Agile methodologies for iterative development. 
+                Leader, effective communicator, and team player. Emphasizing Agile methodologies for iterative
+                development.
                 Adaptability, innovation, and problem-solving are at the core of my approach.
               </span>
             </div>
@@ -200,8 +202,8 @@
               estimates efficiently. It generates automated monthly invoices specific to clients selected using jsPDF
               API.
             </p>
-            <a class="project-link" href="InvoiSync.html"
-              aria-label="InvoiSync Project documentation on GitHub">Case Study</a>
+            <a class="project-link" href="InvoiSync.html" aria-label="InvoiSync Project documentation on GitHub">Case
+              Study</a>
           </div>
           <div class="project-img-container">
             <img src="/images/inviosync.png" alt="InvoiSync Logo" />
@@ -220,7 +222,7 @@
               is a testament to this belief, curated with the utmost attention to design detail, emphasizing
               our core values of expertise, accessibility, and differentiation in the educational sector.
             </p>
-            <a class="project-link" href="https://bettertimestutoring.com/" 
+            <a class="project-link" href="https://bettertimestutoring.com/"
               aria-label="Link to Better Times Tutoring Website">Visit Site</a>
           </div>
           <div class="project-img-container">
@@ -243,7 +245,7 @@
               and operation execution, presenting various branches for diverse
               FEC data management scenarios.
             </p>
-            <a class="project-link" href="https://github.com/B1mendez/FEGprocessorx" 
+            <a class="project-link" href="https://github.com/B1mendez/FEGprocessorx"
               aria-label=" FEGprocessorX Project documentation on GitHub">Documentation</a>
           </div>
           <div class="project-img-container">
@@ -272,30 +274,30 @@
             <img src="/images/bitcoin.jpg" alt="The Byte Logo for Frugal" />
           </div>
         </div>
-      </div>
-      
-      <div class="project">
-        <div class="project-description">
-          <span>2022</span>
-          <h3>Frugal</h3>
-          <span>Team Leader</span>
-          <p>
-            A web-based expense tracker, to ensures your financial data stays in the right hands while providing an
-            intuitive
-            interface to manage your expenses seamlessly. Designed with both security and user experience in mind,
-            'Frugal'
-            offers a CRUD functionality allowing users to manage their financial records, a login system for varies
-            accounts,
-            data visualization to provide users with immediate insights into their spending behaviors, and search bar
-            feature
-            and expense categorization.
-          </p>
-          <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main"
-            aria-label="Frugal Project documentation on GitHub">Documentation</a>
 
-        </div>
-        <div class="project-img-container">
-          <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
+        <div class="project">
+          <div class="project-description">
+            <span>2022</span>
+            <h3>Frugal</h3>
+            <span>Team Leader</span>
+            <p>
+              A web-based expense tracker, to ensures your financial data stays in the right hands while providing an
+              intuitive
+              interface to manage your expenses seamlessly. Designed with both security and user experience in mind,
+              'Frugal'
+              offers a CRUD functionality allowing users to manage their financial records, a login system for varies
+              accounts,
+              data visualization to provide users with immediate insights into their spending behaviors, and search bar
+              feature
+              and expense categorization.
+            </p>
+            <a class="project-link" href="https://github.com/cse110-fa22-group8/cse110-fa22-group8/tree/main"
+              aria-label="Frugal Project documentation on GitHub">Documentation</a>
+
+          </div>
+          <div class="project-img-container">
+            <img src="/images/TheByte.png" alt="The Byte Logo for Frugal" />
+          </div>
         </div>
       </div>
     </section>
@@ -313,7 +315,8 @@
         <div id="contact-section">
           <div id="social-section">
             <div class="social-icon">
-              <a href="https://twitter.com/mangolianbeefba" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+              <a href="https://twitter.com/mangolianbeefba" aria-label="Twitter" target="_blank"
+                rel="noopener noreferrer">
                 <i class="fab fa-twitter"></i>
               </a>
             </div>
@@ -323,12 +326,14 @@
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.instagram.com/brianmendez0/" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.instagram.com/brianmendez0/" aria-label="Instagram" target="_blank"
+                rel="noopener noreferrer">
                 <i class="fab fa-instagram"></i>
               </a>
             </div>
             <div class="social-icon">
-              <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/" aria-label="Linkedin" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/brian-mendez-2530801b0/" aria-label="Linkedin" target="_blank"
+                rel="noopener noreferrer">
                 <i class="fab fa-linkedin"></i>
               </a>
             </div>
@@ -356,4 +361,5 @@
     </div>
   </footer>
 </body>
+
 </html>
